fixed issue where footer was overlapping content

--- a/client/src/scss/footer.scss
+++ b/client/src/scss/footer.scss
@@ -7,5 +7,4 @@
   font-weight: 500;
   line-height: 1.5rem;
   border-top: 1px solid #dadce0;
-  margin-top: 16px;
 }
