--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -8,6 +8,9 @@ html,
 
 body {
   font-family: 'Roboto', sans-serif !important;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .wrap {
